<resources>
    <string name="app_name">Faithflow-Bible</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="splash_logo_description">FaithFlow logo</string>
    <string name="splash_title">FaithFlow</string>
    <string name="splash_subtitle">Read · Pray · Grow · Together</string>
    <string name="splash_tagline">Your Word. Anytime. Anywhere.</string>
    <string name="ff_nav_home">Home</string>
    <string name="ff_nav_bible">Bible</string>
    <string name="ff_nav_saved">Saved</string>
    <string name="ff_nav_notes">Notes</string>
    <string name="ff_settings">Settings</string>
    <string name="ff_verse_of_the_hour">VERSE OF THE HOUR</string>
    <string name="ff_read_in_context">Read in Context</string>
    <string name="ff_share">Share</string>
    <string name="ff_quick_stats">Quick Stats</string>
    <string name="ff_recent_saved">Recent Saved</string>
    <string name="ff_highlights">Highlights</string>
    <string name="ff_chapters">Chapters</string>
    <string name="ff_back">Back</string>
    <string name="ff_close">Close</string>
    <string name="ff_previous_chapter">Previous chapter</string>
    <string name="ff_next_chapter">Next chapter</string>
    <string name="ff_text_size">Text size</string>
    <string name="ff_translation">Change translation</string>
    
    <string name="ff_verse_actions">Verse Actions</string>
    <string name="ff_copy">Copy</string>
    <string name="ff_note">Note</string>
    <string name="ff_highlight">Highlight</string>
    <string name="ff_copied">Copied to clipboard</string>
    <string name="ff_favorites">Favorites</string>
    <string name="ff_highlighted">Highlighted</string>
    <string name="ff_bookmarked">Bookmarked</string>
    <string name="ff_no_saved_title">No saved verses yet</string>
    <string name="ff_no_saved_body">Save or highlight verses while you read and they will show up here.</string>
    <string name="ff_no_highlights_title">No highlights yet</string>
    <string name="ff_browse_bible">Browse Bible</string>
    <string name="ff_no_notes_title">No notes yet</string>
    <string name="ff_no_notes_body">Create your first note to keep your thoughts close.</string>
    <string name="ff_create_note">Create Note</string>
    <string name="ff_add_note">Add note</string>
    <string name="ff_new_note">New Note</string>
    <string name="ff_edit_note">Edit Note</string>
    <string name="ff_title">Title</string>
    <string name="ff_bible_reference">Bible Reference</string>
    <string name="ff_content">Content</string>
    <string name="ff_save">Save</string>
    <string name="ff_saved_indicator">\u2713 Saved</string>
    <string name="ff_delete_note">Delete note</string>
    <string name="ff_delete_note_q">Delete this note?</string>
    <string name="ff_delete">Delete</string>
    <string name="ff_cancel">Cancel</string>
    <string name="ff_untitled">Untitled note</string>
    <string name="ff_write_something">Write something first</string>
    <string name="ff_recent_empty">Nothing here yet. Tap a verse while you read to save or highlight it.</string>
<string name="ff_books_subtitle">Choose a book to start reading</string>
<string name="ff_choose_chapter">Choose a chapter</string>
    <string name="ff_chapter_count">%1$d ch</string>
    <string name="ff_section_appearance">APPEARANCE</string>
    <string name="ff_section_reading">READING</string>
    <string name="ff_section_data">YOUR DATA</string>
    <string name="ff_theme_label">Theme</string>
    <string name="ff_theme_system">System</string>
    <string name="ff_theme_light">Light</string>
    <string name="ff_theme_dark">Dark</string>
    <string name="ff_theme_hint">System follows your phone\u2019s light or dark setting.</string>
    <string name="ff_default_text_size">Default text size</string>
    <string name="ff_size_small">Small</string>
    <string name="ff_size_medium">Medium</string>
    <string name="ff_size_large">Large</string>
    <string name="ff_preview_reference">John 3:16 (WEB)</string>
    <string name="ff_preview_body">For God so loved the world, that he gave his one and only Son, that whoever believes in him should not perish, but have eternal life.</string>
    <string name="ff_clear_marks">Clear highlights and bookmarks</string>
    <string name="ff_clear_marks_hint">Your notes and settings are not affected.</string>
    <string name="ff_clear_marks_q">Clear all highlights and bookmarks?</string>
    <string name="ff_clear_marks_body">This removes %1$d saved and highlighted verses. This cannot be undone.</string>
    <string name="ff_nothing_to_clear">Nothing saved or highlighted yet</string>
    <string name="ff_marks_cleared">Highlights and bookmarks cleared</string>
    <string name="ff_clear">Clear</string>
    <string name="ff_section_notifications">NOTIFICATIONS</string>
    <string name="ff_notifications_label">Hourly verse</string>
    <string name="ff_notifications_hourly">Receive a Bible verse every hour</string>
    <string name="ff_notifications_hint">A notification will appear at the top of each hour with the verse of the hour in your chosen translation.</string>
</resources>